--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ a {
   text-transform: uppercase;
 }
 .landing-page {
-  max-height:100vh;
+  height:calc(var(--vh, 1vh) * 100);
   max-width: 100vw;
   display:flex;
   overflow: hidden;
@@ -48,7 +48,7 @@ a {
 }
 .left, .right {
   flex:1;
-  height: 100vh;
+  height:calc(var(--vh, 1vh) * 100);
 }
 /* LEFT STYLING */
 .left {
